# facebook-chat-processer

./: .gitignore  LICENSE  README.md  prepare_chat_for_ai.py  pyproject.toml
archive/: decode_thai.py  simplify_chat.py  summary_chat.py
src/fbchatproc/: fbchatproc.py
