[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facebook-chat-processer"
version = "0.1.0"
description = "Process Facebook chat history files with Thai language support"
readme = "README.md"
authors = [
    { name = "Apirak Panatkool", email = "apirakb@gmail.com" }
]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathlib",
]

[project.scripts]
fbchatproc = "fbchatproc.fbchatproc:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fbchatproc"]